syntax = "proto3";

package PROTO;

message TestMessage {
  bytes data = 1;
}


